# GeoHPEM_NEW

./: .gitignore  .gitmodules  README.md  environment.yml  format_all.bat  geohpem_cli.py  main.py  pyproject.toml
_Projects/: large_slope_2d.msh
docs/: 2025121714_GeoHPEM_软件架构设计.md  BRANDING.md  CONTRACT_V0_2.md  DEV_SETUP.md  KRATOS_BACKEND_MAPPING.md  PFEM_HEPM_Design_Notes.md  PROJECT_FILE_FORMAT.md  REFERENCE_SOLVERS.md  SOLVER_SUBMODULE_INTEGRATION.md  SOLVER_TEAM_GUIDE.md  UNITS_AND_COORDS.md  VIS_STACK.md  plans.md  pre-user-guides.md
docs/tutorials/: 00_Tutorials_Overview.md  01_Tutorial_DrawGeometry_To_Post.md  02_Tutorial_ImportMesh_To_Post.md  03_Tutorial_OpenCase_Output_Advanced.md
docs/ui/: 00_UI_Overview.md  01_MainWindow.md  02_Input_Workspace.md  03_Output_Workspace.md  04_Dialogs.md  05_Interaction_Model.md
documentation/: README.md
documentation/for-developers/: 01-architecture-overview.md  02-contract-module.md  03-project-module.md  04-gui-module.md  05-mesh-module.md  06-solver-adapter-module.md  07-app-module.md  08-units-module.md  09-domain-module.md  README.md
documentation/for-users/: README.md
scripts/: make_realistic_case.py  make_reference_cases.py
src/geohpem/: __main__.py  cli.py  main.py  units.py
src/geohpem/app/: case_runner.py  compare_outputs.py  diagnostics.py  error_mapping.py  errors.py  precheck.py  run_case.py  validate_inputs.py
src/geohpem/contract/: errors.py  io.py  types.py  validate.py
src/geohpem/domain/: boundary_ops.py  material_catalog.py  material_mapping.py  materials_catalog.default.json  (+3 more)
(+61 files in other folders)
